customize JSQMessage layout

--- a/Simple Chat/Base.lproj/Main.storyboard
+++ b/Simple Chat/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="p5f-qz-dA7">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="p5f-qz-dA7">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -20,13 +20,30 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="O2H-NH-mM8">
+                                <rect key="frame" x="0.0" y="167" width="375" height="500"/>
+                                <color key="backgroundColor" red="0.49080771782014854" green="1" blue="0.4267090343957699" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="500" id="4wb-8O-x12"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" red="0.99495212016976686" green="1" blue="0.43963121089273394" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstItem="O2H-NH-mM8" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="5kJ-wk-KvF"/>
+                            <constraint firstAttribute="trailing" secondItem="O2H-NH-mM8" secondAttribute="trailing" id="9OS-nO-B7k"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="O2H-NH-mM8" secondAttribute="bottom" id="eu1-jf-JbR"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Simple Chat" id="c3D-LP-c61"/>
+                    <connections>
+                        <outlet property="scoreView" destination="O2H-NH-mM8" id="yMc-FX-tB5"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="874" y="793"/>
+            <point key="canvasLocation" x="872.79999999999995" y="792.95352323838085"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="CFg-HX-hfq">
@@ -34,7 +51,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="p5f-qz-dA7" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="NH1-Gs-KZd">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
