--- a/Simple Chat/Base.lproj/Main.storyboard
+++ b/Simple Chat/Base.lproj/Main.storyboard
@@ -25,7 +25,7 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="0.99495212016976686" green="1" blue="0.43963121089273394" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <color key="backgroundColor" red="0.90980392156862744" green="0.92549019607843142" blue="0.93333333333333335" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
                     <navigationItem key="navigationItem" title="Simple Chat" id="c3D-LP-c61"/>
                     <connections>
